Create HTML content

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <h2>About Me</h2>
         <p>Hey there! I'm Angie, a skilled system administrator with a passion for optimizing technology. With several years of experience in the field, I have honed my abilities in maintaining high-performing systems and ensuring the security of sensitive data.
 
-            As a system admin, my primary focus is on monitoring and maintaining computer systems, networks, and servers. I am well-versed in a range of software and hardware platforms, and is always looking for ways to streamline processes and increase efficiency. My expertise includes server maintenance, network administration, and security protocols.
+
+            As a system admin, my primary focus is on monitoring and maintaining computer systems, networks, and servers. I am well-versed in a range of software and hardware platforms and am always looking for ways to streamline processes and increase efficiency. My expertise includes server maintenance, network administration, and security protocols.
             ss
             I am also an excellent problem-solver who approaches issues with a methodical and analytical mindset. I am able to quickly identify the root cause of problems and develop effective solutions to resolve them. My ability to communicate technical concepts in a clear and concise manner has helped me build strong relationships with colleagues and clients.
-            
-            In my free time, I enjoys exploring the latest technology trends and experimenting with new software tools. I am dedicated to staying up-to-date with the latest developments in the field, and is always looking for ways to improve my skills and knowledge.</p>
+           
+            In my free time, I enjoy exploring the latest technology trends and experimenting with new software tools. I am dedicated to staying up-to-date with the latest developments in the field and am always looking for ways to improve my skills and knowledge.</p>
       </section>
       <section id="contact">
         <h2>Contact Me</h2>
